# ncsu-csc510-2025-s1-g1-p1

./: .gitignore  .hadolint.yaml  .prettierrc.json  .yamllint.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  INSTALL.md  INSTALL.md.md  LICENSE  LICENSE.md  README.md  package-lock.json  requirements.txt  setup.cfg
.github/workflows/: coverage.yml  linter.yml  nightly.yml  style-check.yml
proj1/: file_list.txt
proj2/: README.md
proj2/backend/: .gitignore  database.py  load_database.py  pyvenv.cfg  requirements.txt  run.py
proj2/backend/_build/html/: .buildinfo  api.html  genindex.html  models.html  (+5 more)
proj2/backend/app/: app.py  conf.py  conftest.py  customers.py  database.py  drivers.py  index.rst  load_database.py  models.py  models.rst  models_test.py  routes.rst  run.py  services.rst  swagger_config.py  test_customer_routes.py  test_customer_service.py  test_user_routes.py  test_user_service.py  testing_utils.py  utils.py
proj2/backend/source/: .buildinfo  api.html  conf.py  genindex.html  index.html  models.html  objects.inv  py-modindex.html  routes.html  search.html  searchindex.js  services.html
proj2/backend/tests/: conftest.py
proj2/frontend/: .eslintrc.json  .gitignore  .stylelintrc.json  README.md  next.config.js  package-lock.json  package.json  tsconfig.json  typedoc.json
proj2/frontend/app/: layout.tsx  page.tsx
proj2/frontend/docs/: hierarchy.html  index.html
proj2/frontend/lib/: cartApi.ts  cartStore.ts  checkoutApi.ts  sampleData.ts  types.ts
proj2/frontend/movie_munchers/: package.json
(+136 files in other folders)
