[metadata]
name = ncsu-csc510-g1-p1
version = 0.1.0
description = CSC 510 Software Engineering Project 1
long_description = file: README.md
license = MIT License
platforms = any

[options]
packages = find:
include_package_data = True
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

# --- Tool Configuration ---

# Configuration for Black (Python Code Formatter)
[tool:black]
line-length = 80
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
# Include all standard Python files and Jupyter notebooks
include = \.pyi?$|\.ipynb$
# Exclude common directories that don't need formatting
exclude = 
    /docs
    /tests

# Configuration for Flake8 (Python Code Linter)
[flake8]
max-line-length = 80
# Ignore E203 (Black conflict), W503 (Black conflict), and D-codes (pydocstyle conflicts)
ignore = E203, W503, D100, D101, D102, D103, D104, D105, D106, D107
# Exclude common generated/dependency directories
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    docs,
    tests
